` PlantUML <plantuml.com> State Diagram.
` Generated from src/main/java/io/temporal/internal/statemachines/CancelExternalStateMachine.java
` by io.temporal.internal.statemachines.CommandsGeneratePlantUMLStateDiagramsTest.


@startuml
title CancelExternal State Transitions

[*] --> CREATED
CREATED --> REQUEST_CANCEL_EXTERNAL_COMMAND_CREATED: SCHEDULE
REQUEST_CANCEL_EXTERNAL_COMMAND_CREATED --> REQUEST_CANCEL_EXTERNAL_COMMAND_CREATED: REQUEST_CANCEL_EXTERNAL_WORKFLOW_EXECUTION
REQUEST_CANCEL_EXTERNAL_COMMAND_CREATED --> REQUEST_CANCEL_EXTERNAL_COMMAND_RECORDED: REQUEST_CANCEL_EXTERNAL_WORKFLOW_EXECUTION_INITIATED
REQUEST_CANCEL_EXTERNAL_COMMAND_RECORDED --> CANCEL_REQUESTED: EXTERNAL_WORKFLOW_EXECUTION_CANCEL_REQUESTED
REQUEST_CANCEL_EXTERNAL_COMMAND_RECORDED --> REQUEST_CANCEL_FAILED: REQUEST_CANCEL_EXTERNAL_WORKFLOW_EXECUTION_FAILED
CANCEL_REQUESTED --> [*]
REQUEST_CANCEL_FAILED --> [*]
center footer Copyright (C) 2020 Temporal Technologies, Inc. All Rights Reserved.
@enduml
